Added descriptions for projects TTT and Dollary

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      ...
+                      My project, 'Dollary', is here to provide a platform for logging your spendings each month and keeping track of your budget and how much you've spent so far. User's are able to create an account, create envelopes (which contain your spendings for that month) and add spendings into each envelope to keep budgeting organized.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
@@ -165,7 +165,7 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      ...
+                      A Tic-tac-toe web application using front-end and backend technologies. Uses curl script, jQuery.ajax and HTTP requests to API servers to create token authentication functionality (sign up, sign in, change password and sign out), allowing the user to have their own personal account. Javascript and jQuery are used for game logic and game functionality. HTML, CSS and SCSS are used for front end user experience and design.
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
