Added Modal for Prepper

--- a/index.html
+++ b/index.html
@@ -118,6 +118,35 @@
               </div>
             </div>
 
+            <div class="prepper project">
+              <img src="assets/img/prepper.png">
+              <!-- trigger prepper modal -->
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#prepperModalCenter">
+                Learn about Dollary
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="prepperModalCenter" tabindex="-1" role="dialog" aria-labelledby="prepperModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="prepperModalLongTitle">Prepper</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      My project, 'Prepper', is here to provide a platform for logging your spendings each month and keeping track of your budget and how much you've spent so far. User's are able to create an account, create envelopes (which contain your spendings for that month) and add spendings into each envelope to keep budgeting organized.
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary modal-button"><a href="https://britneyart80.github.io/Prepper/" target="_blank">Go to Dollary</a></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="dollary project">
               <img src="assets/img/dollary.png">
               <!-- trigger dollary modal -->
