Added descriptions for projects and About me

--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
             <img src="assets/img/profile.jpg">
           </div>
           <p>
-            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-            quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis
-            autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+            Hi! My name is Britney Chen and I am a student at Northeastern University pursuing a BS in Computer Science and Design, and a minor in Leadership and Human Capital. I attended an international school representing over 52 countries and through that, I've learned how to communicate and collaborate with many different types of people. I have been passionate about the arts ever since I was little, and after getting a taste of the programming world, I am eager to keep on building and learning as much as I can. Please enjoy looking through my portfolio and projects, and I hope to be in contact with you!
           </p>
         </section>
 
@@ -108,7 +105,19 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      ...
+                      <p>
+                        I wanted to create my own personal space online where I could document my projects as well as practice my web-page development skills.
+                      </p>
+                      <p>
+                        Technologies used:
+                      </p>
+                      <ul class="technologies">
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                      </ul>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
@@ -122,7 +131,7 @@
               <img src="assets/img/prepper.png">
               <!-- trigger prepper modal -->
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#prepperModalCenter">
-                Learn about Dollary
+                Learn about Prepper
               </button>
 
               <!-- Modal -->
@@ -136,11 +145,26 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      My project, 'Prepper', is here to provide a platform for logging your spendings each month and keeping track of your budget and how much you've spent so far. User's are able to create an account, create envelopes (which contain your spendings for that month) and add spendings into each envelope to keep budgeting organized.
+                      <p>
+                        My project, 'Prepper', is here to provide a platform for logging your spendings each month and keeping track of your budget and how much you've spent so far. User's are able to create an account, create envelopes (which contain your spendings for that month) and add spendings into each envelope to keep budgeting organized.
+                      </p>
+                      <p>
+                        Technologies used:
+                      </p>
+                      <ul class="technologies">
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>React</li>
+                        <li>React Bootstrap</li>
+                        <li>MongoDB</li>
+                        <li>Express</li>
+                      </ul>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary modal-button"><a href="https://britneyart80.github.io/Prepper/" target="_blank">Go to Dollary</a></button>
+                      <button type="button" class="btn btn-primary modal-button"><a href="https://britneyart80.github.io/Prepper/#/" target="_blank">Go to Prepper</a></button>
                     </div>
                   </div>
                 </div>
@@ -165,7 +189,22 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      My project, 'Dollary', is here to provide a platform for logging your spendings each month and keeping track of your budget and how much you've spent so far. User's are able to create an account, create envelopes (which contain your spendings for that month) and add spendings into each envelope to keep budgeting organized.
+                      <p>
+                        My project, 'Dollary', is here to provide a platform for logging your spendings each month and keeping track of your budget and how much you've spent so far. User's are able to create an account, create envelopes (which contain your spendings for that month) and add spendings into each envelope to keep budgeting organized.
+                      </p>
+                      <p>
+                        Technologies used:
+                      </p>
+                      <ul class="technologies">
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>AJAX</li>
+                        <li>Bootstrap</li>
+                        <li>Handlebars</li>
+                        <li>Ruby on Rails</li>
+                      </ul>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
@@ -194,7 +233,19 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      A Tic-tac-toe web application using front-end and backend technologies. Uses curl script, jQuery.ajax and HTTP requests to API servers to create token authentication functionality (sign up, sign in, change password and sign out), allowing the user to have their own personal account. Javascript and jQuery are used for game logic and game functionality. HTML, CSS and SCSS are used for front end user experience and design.
+                      <p>
+                        A Tic-tac-toe web application using front-end and backend technologies. Uses curl script, jQuery.ajax and HTTP requests to API servers to create token authentication functionality (sign up, sign in, change password and sign out), allowing the user to have their own personal account. Javascript and jQuery are used for game logic and game functionality. HTML, CSS and SCSS are used for front end user experience and design.
+                      </p>
+                      <p>
+                        Technologies used:
+                      </p>
+                      <ul class="technologies">
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>AJAX</li>
+                      </ul>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
