--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                         I made this portfolio template-free and used bootstrap, html and css to style and layout the webpage. With bootstrap's flex features, the portfolio is also mobile-friendly.
                         The interactive elements on the page are handled using Javascript and jQuery.
                       </p>
-                      <p> This portfolio is still under development and I plan to keep adding to it as I expand my skill set and complete more projects, but I hope you enjoy perusing what's here so far! </p>
+                      <p>
+                        This portfolio is still under development and I plan to keep adding to it as I expand my skill set and complete more projects, but I hope you enjoy perusing what's here so far!
+                      </p>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary modal-button" data-dismiss="modal">Close</button>
