--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link href="assets/styles/main.css" rel="stylesheet">
+  <link href="assets/styles/footer.css" rel="stylesheet">
+  <link href="assets/styles/about.css" rel="stylesheet">
+  <link href="assets/styles/header.css" rel="stylesheet">
+  <link href="assets/styles/projects.css" rel="stylesheet">
+  <link href="assets/styles/skills.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -32,8 +37,8 @@
 
     <!-- header section -->
     <header class="row align-items-center">
-      <h1> Britney Chen </h1>
-      <h2> BS Computer Science and Design, Software Engineer </h2>
+      <h1 class="header"> Britney Chen </h1>
+      <h2 class="subheader"> BS Computer Science and Design, Software Engineer </h2>
     </header>
 
     <!-- wrapper for content -->
@@ -45,21 +50,23 @@
         </div>
         <p id="btt-text" style="font-size: .5rem;">Back to Top</p>
         <!-- section for about -->
-        <section class="row" id="about">
-          <h2> About Me </h2>
-          <div class="profile-pic">
+        <section class="fade-scroll row" id="about">
+          <div class="about-info col-7">
+            <h2 class="section-header"> About Me </h2>
+            <p class="about-text">
+              Hi! My name is Britney Chen and I am a student at Northeastern University pursuing a BS in Computer Science and Design, and a minor in Leadership and Human Capital. I attended an international school representing over 52 countries and through that, I've learned how to communicate and collaborate with many different types of people. I have been passionate about the arts ever since I was little, and after getting a taste of the programming world, I am eager to keep on building and learning as much as I can. Please enjoy looking through my portfolio and projects, and I hope to be in contact with you!
+            </p>
+          </div>
+          <div class="profile-pic col-5">
             <img src="assets/img/profile.jpg">
           </div>
-          <p>
-            Hi! My name is Britney Chen and I am a student at Northeastern University pursuing a BS in Computer Science and Design, and a minor in Leadership and Human Capital. I attended an international school representing over 52 countries and through that, I've learned how to communicate and collaborate with many different types of people. I have been passionate about the arts ever since I was little, and after getting a taste of the programming world, I am eager to keep on building and learning as much as I can. Please enjoy looking through my portfolio and projects, and I hope to be in contact with you!
-          </p>
         </section>
 
         <!-- section for skills -->
-        <section class="row flex-column" id="skills">
-          <h2> Skills </h2>
-          <div class="skills-subheader">
-            <h3> Languages </h3>
+        <section class="fade-scroll row flex-column" id="skills">
+          <h2 class="section-header"> Skills </h2>
+          <div>
+            <h3 class="skills-subheader"> Languages </h3>
             <div class="languages d-flex justify-content-center align-items-center flex-wrap">
               <i class="devicon-javascript-plain colored" name="JavaScript"><p></p></i>
               <i class="devicon-java-plain" name="Java"><p></p></i>
@@ -68,8 +75,8 @@
               <i class="devicon-css3-plain colored" name="CSS"><p></p></i>
             </div>
           </div>
-          <div class="skills-subheader">
-            <h3> Libraries and Frameworks </h3>
+          <div>
+            <h3 class="skills-subheader"> Libraries and Frameworks </h3>
             <div class="frameworks d-flex justify-content-center align-items-center flex-wrap">
               <i class="devicon-bootstrap-plain colored" name="Bootstrap"><p></p></i>
               <i class="devicon-jquery-plain colored" name="jQuery"><p></p></i>
@@ -82,8 +89,8 @@
         </section>
 
         <!-- section for projects -->
-        <section class="row flex-column justify-content-center align-items-center" id="projects">
-          <h2> Projects </h2>
+        <section class="fade-scroll row flex-column justify-content-center align-items-center" id="projects">
+          <h2 class="section-header"> Projects </h2>
           <div class="projects d-flex flex-row flex-wrap justify-content-center align-items-center">
 
             <div class="portfolio project">
@@ -255,8 +262,8 @@
       </div>
 
       <!-- section for contact -->
-      <section id="contact">
-        <h1> Contact Me! </h1>
+      <section id="contact" class="fade-scroll">
+        <h1 class="section-header"> Contact Me! </h1>
         <div class="container mx-auto">
           <div class="info row justify-content-center align-items-center">
 
@@ -303,7 +310,7 @@
 
       <!-- credits section -->
 
-      <div class="credits">
+      <div class="credits fade-scroll">
         <p>Icons made by
           <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>,
           <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>,
