--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <nav style="margin-right: -15px;">
           <a href="#about" class="toscroll">About</a>
           <a href="#skills" class="toscroll">Skills</a>
+          <a href="#values" class="toscroll">Values</a>
           <a href="#projects" class="toscroll">Projects</a>
-          <a href="#contact" class="toscroll">Contact</a>
         </nav>
       </div>
     </div>
@@ -56,14 +56,14 @@
 
         <!-- section for about -->
         <section class="fade-scroll row" id="about">
+          <div class="profile-pic col-5">
+            <img src="assets/img/me.jpg">
+          </div>
           <div class="about-info col-7">
             <h2 class="section-header"> About Me </h2>
             <p class="about-text">
               Hi! My name is Britney Chen and I am a student at Northeastern University pursuing a BS in Computer Science and Design, and a minor in Leadership and Human Capital. I attended an international school representing over 52 countries and through that, I've learned how to communicate and collaborate with many different types of people. I have been passionate about the arts ever since I was little, and after getting a taste of the programming world, I am eager to keep on building and learning as much as I can. Please enjoy looking through my portfolio and projects, and I hope to be in contact with you!
             </p>
-          </div>
-          <div class="profile-pic col-5">
-            <img src="assets/img/profile.jpg">
           </div>
         </section>
 
@@ -83,17 +83,16 @@
           <div>
             <h3 class="skills-subheader"> Libraries and Frameworks </h3>
             <div class="frameworks d-flex justify-content-center align-items-center flex-wrap">
-              <i name="SFCC"><img src="assets/img/salesforce.png" class="salesforce-icon"><p></p></i>
               <i class="devicon-bootstrap-plain colored" name="Bootstrap"><p></p></i>
               <i class="devicon-jquery-plain colored" name="jQuery"><p></p></i>
               <i class="devicon-sass-original colored" name="Sass"><p></p></i>
+              <i name="SFCC"><img src="assets/img/salesforce.png" class="salesforce-icon"><p></p></i>
               <i class="devicon-react-original colored" name="React"><p></p></i>
               <i class="devicon-rails-plain colored" name="Rails"><p></p></i>
               <i class="devicon-express-original colored" name="Express"><p></p></i>
               <i class="devicon-mongodb-plain colored" name="MongoDB"><p></p></i>
           </div>
         </section>
-
 
         <section id="values" class="fade-scroll">
           <h2 class="section-subheader"> MY VALUES </h2>
@@ -128,11 +127,12 @@
           <div class="projects">
             <!-- PORTFOLIO -->
             <div class="fade-scroll portfolio project right">
-              <img src="assets/img/portfolio.png">
-              <!-- trigger portfolio modal -->
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#portfolioModalCenter">
-                Learn about this portfolio!
-              </button>
+              <div class="modal-trigger" data-toggle="modal" data-target="#portfolioModalCenter">
+                <div class="overlay">
+                  <h2 class="project-title">PORTFOLIO</h2>
+                </div>
+                <img src="assets/img/portfolio.JPG">
+              </div>
 
               <!-- Modal -->
               <div class="modal fade" id="portfolioModalCenter" tabindex="-1" role="dialog" aria-labelledby="portfolioModalCenterTitle" aria-hidden="true">
@@ -165,11 +165,12 @@
 
             <!-- PREPPER -->
             <div class="fade-scroll prepper project left">
-              <img src="assets/img/prepper.png">
-              <!-- trigger prepper modal -->
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#prepperModalCenter">
-                Learn about Prepper
-              </button>
+              <div class="modal-trigger" data-toggle="modal" data-target="#prepperModalCenter">
+                <div class="overlay">
+                  <h2 class="project-title">PREPPER</h2>
+                </div>
+                <img src="assets/img/prepper.JPG">
+              </div>
 
               <!-- Modal -->
               <div class="modal fade" id="prepperModalCenter" tabindex="-1" role="dialog" aria-labelledby="prepperModalCenterTitle" aria-hidden="true">
@@ -210,11 +211,12 @@
 
             <!-- DOLLARY -->
             <div class="fade-scroll dollary project left">
-              <img src="assets/img/dollary.png">
-              <!-- trigger dollary modal -->
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#dollaryModalCenter">
-                Learn about Dollary
-              </button>
+              <div class="modal-trigger" data-toggle="modal" data-target="#dollaryModalCenter">
+                <div class="overlay">
+                  <h2 class="project-title">DOLLARY</h2>
+                </div>
+                <img src="assets/img/dollary.JPG">
+              </div>
 
               <!-- Modal -->
               <div class="modal fade" id="dollaryModalCenter" tabindex="-1" role="dialog" aria-labelledby="dollaryModalCenterTitle" aria-hidden="true">
@@ -255,12 +257,13 @@
 
             <!-- TICTACTOE -->
             <div class="fade-scroll tictactoe project right">
-              <img src="assets/img/tic-tac-toe.png">
               <!-- trigger tic tac toe modal -->
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#tttModalCenter">
-                Learn about Tic-Tac-Toe
-              </button>
-
+              <div class="modal-trigger" data-toggle="modal" data-target="#tttModalCenter">
+                <div class="overlay">
+                  <h2 class="project-title">TIC-TAC-TOE</h2>
+                </div>
+                <img src="assets/img/tic-tac-toe.JPG">
+              </div>
               <!-- Modal -->
               <div class="modal fade" id="tttModalCenter" tabindex="-1" role="dialog" aria-labelledby="tttModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
@@ -299,55 +302,30 @@
       </div>
 
       <!-- section for contact -->
-      <section id="contact" class="fade-scroll">
-        <h1 class="section-header"> Contact Me! </h1>
-        <div class="container mx-auto">
+      <section id="contact">
           <div class="info row justify-content-center align-items-center">
-
             <!-- column one -->
-            <div class="contact-info col-6">
-              <div id="talkbubble">
-                <div class="talkbubble-info">
-                  <img src="assets/img/email.png">
-                  <p> Email me at</p>
-                  <a href="mailto:chen.bri@husky.neu.edu">chen.bri@husky.neu.edu</a>
-                  <img src="assets/img/telephone.png">
-                  <p> Call me at </p>
-                  <p>(909)-509-1668</p>
-                </div>
-              </div>
-              <div class="art-portfolio">
-                <h2> I also draw! </h2>
-                <a href="#">
-                  <p> click here to view my art portfolio (currently in progress)</p>
-                  <img class="arrow" src="assets/img/arrow.png">
-                  <img class="arrow" src="assets/img/creativity.png">
-                </a>
-              </div>
+          <div class="links col-12 mx-auto">
+            <div class="link email">
+              <a href="mailto:chen.bri@husky.neu.edu"><img src="assets/img/email.png"></a>
             </div>
-
-            <!-- column two -->
-            <div class="other-links col-6">
-              <div class="github">
+            <div class="link github">
+              <a href="https://github.com/britneyart80" target="_blank">
                 <img src="assets/img/github-logo.png">
-                <a href="https://github.com/britneyart80" target="_blank">
-                  - MY GITHUB -</a> <br>
-                <a href="https://github.com/britneyart80/britneyart80.github.io" target="_blank"> - THIS REPO - </a>
-              </div>
-              <div class="linkedin">
-                <a href="https://www.linkedin.com/in/britney-chen-08/" target="_blank">
-                  <img src="assets/img/linked-in-logo-of-two-letters.png">
-                  - LINKEDIN - </a>
-              </div>
+              </a>
             </div>
-
+            <div class="link linkedin">
+              <a href="https://www.linkedin.com/in/britney-chen-08/" target="_blank">
+                <img src="assets/img/linked-in-logo-of-two-letters.png">
+              </a>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- credits section -->
 
-      <div class="credits fade-scroll">
+      <div class="credits">
         <p>Icons made by
           <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>,
           <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a>,
