--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           <a href="#skills" class="toscroll">Skills</a>
           <a href="#values" class="toscroll">Values</a>
           <a href="#projects" class="toscroll">Projects</a>
+          <a href="#contact" class="toscroll">Contacts</a>
+
         </nav>
       </div>
     </div>
@@ -60,9 +62,9 @@
             <img src="assets/img/me.jpg">
           </div>
           <div class="about-info col-7">
-            <h2 class="section-header"> About Me </h2>
+            <h2 class="section-header"> About </h2>
             <p class="about-text">
-              Hi! My name is Britney Chen and I am a student at Northeastern University pursuing a BS in Computer Science and Design, and a minor in Leadership and Human Capital. I attended an international school representing over 52 countries and through that, I've learned how to communicate and collaborate with many different types of people. I have been passionate about the arts ever since I was little, and after getting a taste of the programming world, I am eager to keep on building and learning as much as I can. Please enjoy looking through my portfolio and projects, and I hope to be in contact with you!
+              Hi! My name is Britney Chen and I am currently a 3rd year student at Northeastern University pursuing a BS in Computer Science and Design, and a minor in Leadership and Human Capital. This portfolio will stay up to date on my latest projects/experiences. Please enjoy looking through and please feel free to contact me if you would like to collaborate!
             </p>
           </div>
         </section>
