added python as language

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
   <script src="assets/scripts/index.js" type="text/javascript" charset="utf-8" defer></script>
 </head>
 
@@ -77,9 +78,10 @@
             <div class="languages d-flex justify-content-center align-items-center flex-wrap">
               <i class="devicon-javascript-plain colored" name="JavaScript"><p></p></i>
               <i class="devicon-java-plain" name="Java"><p></p></i>
-              <i class="devicon-ruby-plain colored" name="Ruby"><p></p></i>
+              <i class="devicon-python-plain" name="Python"><p></p></i>
               <i class="devicon-html5-plain" name="HTML"><p></p></i>
               <i class="devicon-css3-plain colored" name="CSS"><p></p></i>
+              <i class="devicon-ruby-plain colored" name="Ruby"><p></p></i>
             </div>
           </div>
           <div>
